--- a/concepttest-app/package.json
+++ b/concepttest-app/package.json
@@ -2,9 +2,12 @@
   "name": "concept-test",
   "main": "server.js",
   "dependencies": {
-	"express" : "~4.5.1",
-	"mongoose" : "~3.8.0",
-	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2"        
+    "express" : "~4.5.1",
+    "express-session": "~1.0.0",
+    "mongoose" : "~3.8.0",
+    "passport" : "~0.1.17",         
+    "passport-local" : "~0.1.6",
+    "body-parser" : "~1.4.2",
+    "bcrypt-nodejs" : "latest"     
   }
 }
