--- a/concepttest-app/package.json
+++ b/concepttest-app/package.json
@@ -2,12 +2,18 @@
   "name": "concept-test",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
+    "express": "~4.5.1",
     "express-session": "~1.0.0",
-    "mongoose" : "~3.8.0",
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",
-    "body-parser" : "~1.4.2",
-    "bcrypt-nodejs" : "latest"     
+    "mongoose": "~3.8.0",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "body-parser": "~1.4.2",
+    "bcrypt-nodejs": "latest"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "jit-grunt": "^0.10.0"
   }
 }
