--- a/concepttest-service/package.json
+++ b/concepttest-service/package.json
@@ -5,8 +5,9 @@
     "express" : "~4.5.1",
     "express-session": "~1.0.0",
     "mongoose" : "~3.8.0",
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",
+    "passport": "^0.3.0",
+    "passport-jwt": "^1.2.1",
+    "jwt-simple": "^0.3.1",
     "body-parser" : "~1.4.2",
     "bcrypt-nodejs" : "latest"
   }
